# 3_Course_CGLabs-1_3

./: .clang-format  Application.cpp  CMakeLists.txt  Lab2.cpp  Lab3.cpp  Lab4.cpp  README.md  application.hpp  buffer.hpp  buffer_layout.hpp  c_map_texture.hpp  camera.hpp  cgLabs  color_buffer.hpp  cone.hpp  cylinder.hpp  functions.hpp  index_buffer.hpp  instructions.md  lab1.cpp  lab4.cpp  lib.hpp  light.hpp  lights.hpp  main.cpp  material.hpp  mesh.hpp  obj_loader.hpp  object.hpp  renderer.hpp  shader.hpp  shape.hpp  spdlogDummy.hpp  texture.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp  window.hpp
Buffers/: buffer.hpp  color_buffer.hpp  index_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
Labs/: lab2.cpp  lab4.cpp
Libs/: lodepng.cpp  lodepng.hpp  loguru.cpp  loguru.hpp
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
Libs/glfw/: CMakeCache.txt
Libs/magnum/: CMakeLists.txt
Libs/magnum/src/Magnum/: Timeline.h
Libs/plog/: CMakeLists.txt  README.md
Libs/plog/include/plog/: Init.h  Logger.h  Record.h  Severity.h  Util.h  WinApi.h
Libs/plog/samples/: CMakeLists.txt
Libs/plog/samples/Chained/: CMakeLists.txt
Libs/plog/samples/ColorConsole/: Main.cpp
Libs/plog/samples/CustomAppender/: Main.cpp
Libs/plog/samples/CustomConverter/: Main.cpp
Libs/plog/samples/CustomFormatter/: Main.cpp
Libs/plog/samples/CustomType/: Main.cpp
Libs/plog/samples/DebugOutput/: CMakeLists.txt  Main.cpp
Libs/plog/samples/Demo/: CMakeLists.txt  Customer.h  Main.cpp  MyClass.cpp  MyClass.h
Libs/plog/samples/EventLog/: CMakeLists.txt  Main.cpp
Libs/plog/samples/Facilities/: Main.cpp
Libs/plog/samples/Hello/: Main.cpp
Libs/plog/samples/MultiAppender/: Main.cpp
Libs/plog/samples/MultiInstance/: Main.cpp
Libs/plog/samples/ObjectiveC/: CMakeLists.txt  Main.mm
Libs/plog/samples/Performance/: Main.cpp
Libs/plog/samples/SkipNativeEOL/: Main.cpp
Libs/plog/samples/UtcTime/: Main.cpp
Libs/spdlog/cmake/: spdlogCPack.cmake  utils.cmake  version.rc.in
Libs/spdlog/include/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
Libs/spdlog/include/cfg/: argv.h  env.h  helpers-inl.h
Libs/spdlog/include/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  (+14 more)
Libs/spdlog/src/: async.cpp  color_sinks.cpp  file_sinks.cpp  fmt.cpp  spdlog.cpp  stdout_sinks.cpp
Shapes/: cone.hpp  cylinder.hpp  shape.hpp
labs/: Lab2.cpp  Lab3.cpp  Lab4.cpp  lab3.md
playground/: lightEmiter.glsl  lighting.glsl  pg_lights.cpp
resources/shaders/: basic.glsl  basic_w_cubemap.glsl  basic_w_layout.glsl  basic_w_light.glsl  basic_w_texture.glsl  basic_w_uniforms.glsl
(+56 files in other folders)
